--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,12 +1,31 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap");
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer utilities {
+  .stat-container {
+    @apply px-5 py-[10] rounded-lg flex items-center gap-3  lg:flex-grow;
+  }
+  .fa-icon {
+    @apply border border-blue-1 rounded-full p-4 w-8 h-8 flex justify-center items-center bg-[#2b64cf1b];
+  }
+  .col2 {
+    @apply flex flex-col;
+  }
+
+  .over {
+    @apply md:w-[45%] flex gap-3 flex-grow justify-between;
+  }
+
+  .lin-grad {
+    @apply bg-gradient-to-tr from-blue-1 to-blue-4;
+  }
+}
+
 :root {
-  --light-1: #ffffff;
   --light-2: #eef0f5;
-  --light-3: #f3f7fc;
-  --light-4: #8d8d8d;
-  --light-5: #c4c4c4;
-  --blue-1: #2b64cf;
 }
 
 *,
@@ -27,6 +46,6 @@ a {
 }
 
 #app {
-  /* max-width: 1200px; */
+  max-width: 1200px;
   margin: 0 auto;
 }
