--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -32,14 +32,10 @@
 
 body {
   font-family: "Roboto", sans-serif;
+  overflow-x: hidden;
   background-color: #0d1117;
 }
 
 a {
   text-decoration: none;
-}
-
-#app {
-  max-width: 1200px;
-  margin: 0 auto;
 }
